--- a/Clima_13/View/Base.lproj/Main.storyboard
+++ b/Clima_13/View/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                                                 </constraints>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <state key="normal" backgroundImage="location.circle.fill" catalog="system"/>
+                                                <connections>
+                                                    <action selector="currentLocationPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EGf-zU-PoZ"/>
+                                                </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="2eh-wL-W34">
                                                 <rect key="frame" x="50" y="0.0" width="274" height="40"/>
@@ -114,6 +117,7 @@
                     <connections>
                         <outlet property="cityLabel" destination="CWP-r8-Jsy" id="FFo-OB-cnK"/>
                         <outlet property="conditionImageView" destination="mYn-vV-MBC" id="Mab-RM-r7J"/>
+                        <outlet property="currentLocation" destination="uqN-kS-Ypi" id="hK4-r3-QsJ"/>
                         <outlet property="searchTextField" destination="2eh-wL-W34" id="2oh-cV-yyQ"/>
                         <outlet property="temperatureLabel" destination="w9o-tW-03D" id="Mti-Xe-2nB"/>
                     </connections>
@@ -129,7 +133,7 @@
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="sun.max" catalog="system" width="128" height="125"/>
         <namedColor name="weatherColor">
-            <color red="0.1471503079" green="0.25840589400000002" blue="0.27843588590000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.14509803921568629" green="0.25490196078431371" blue="0.27843137254901962" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
